--- a/bluzon/src/main/resources/application.properties
+++ b/bluzon/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=bluzon
+server.port=8080
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/bluzon_db
+spring.datasource.username=bluzon_user
+spring.datasource.password=bluzon_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
